    (Adam Baratz)
  . Add common PDO test suite. (Adam Baratz)
  . Free error and message strings when cleaning up PDO instances.
    (Adam Baratz)
  . Fixed bug #67130 (\PDOStatement::nextRowset() should succeed when all rows
    in current rowset haven't been fetched). (Peter LeBrun)

- phpdbg:
  . Fixed bug #72996 (phpdbg_prompt.c undefined reference to DL_LOAD). (Nikita)

- Session:
  . Fixed bug #68015 (Session does not report invalid uid for files save handler).
    (Yasuo)
  . Fixed bug #73100 (session_destroy null dereference in ps_files_path_create).
    (cmb)

- SOAP:
  . Fixed bug #71711 (Soap Server Member variables reference bug). (Nikita)
  . Fixed bug #71996 (Using references in arrays doesn't work like expected).
    (Nikita)

- SQLite3:
  . Updated bundled SQLite3 to 3.14.2. (cmb)

- Zip:
  . Fixed bug #70752 (Depacking with wrong password leaves 0 length files).
    (cmb)

15 Sep 2016 PHP 7.0.11

- Core:
  . Fixed bug #72944 (Null pointer deref in zval_delref_p). (Dmitry)
  . Fixed bug #72943 (assign_dim on string doesn't reset hval). (Laruence)
  . Fixed bug #72911 (Memleak in zend_binary_assign_op_obj_helper). (Laruence)
  . Fixed bug #72813 (Segfault with __get returned by ref). (Laruence)
  . Fixed bug #72767 (PHP Segfaults when trying to expand an infinite operator).
    (Nikita)
  . Fixed bug #72854 (PHP Crashes on duplicate destructor call). (Nikita)
  . Fixed bug #72857 (stream_socket_recvfrom read access violation). (Anatol)

- COM:
  . Fixed bug #72922 (COM called from PHP does not return out parameters).
    (Anatol)

- Dba:
  . Fixed bug #70825 (Cannot fetch multiple values with group in ini file).
    (cmb)

- FTP:
  . Fixed bug #70195 (Cannot upload file using ftp_put to FTPES with
    require_ssl_reuse). (Benedict Singer)

- GD:
  . Fixed bug #72709 (imagesetstyle() causes OOB read for empty $styles). (cmb)
  . Fixed bug #66005 (imagecopy does not support 1bit transparency on truecolor
    images). (cmb)